@@ -1,28 +1,16 @@
 ## TODO for next 0.98 release
 
-KEYBGCOLOR none
-http://forums.cacti.net/viewtopic.php?f=16&t=55922
-KEYBGCOLOR and KEYOUTLINECOLOR both accept 'none'
-
-Fix 5.3-7.0 strict errors
-
-Config file path validation issue in editor (CVE-2013-3739)
-
-~~KILO was ignored when processing %k in special tokens~~
-
-nowarn_WMxxxx actually works!
-
-rounding error 'kinks' in angled VIA links
-
-Cloning a templated node in editor retains the template in the clone
-
-Imagemap sortorder problem in editor. If you can see it, you can click it.
-
-cacti_use_ifspeed incorrect when interfaces > 20M and ifhighspeed available
-
-if permissions in Cacti said Anyone *and* you, then no map images are shown
-
-Add a warning for missing tables on manage
-~~Add a warning for no maps on main tab if there are NO MAPS~~
-Add note on editor that config names must have no space and end in .conf
+*  KEYBGCOLOR none http://forums.cacti.net/viewtopic.php?f=16&t=55922
+*  Fix 5.3-7.0 strict errors
+*  ~~Config file path validation issue in editor (CVE-2013-3739)~~
+*  ~~KILO was ignored when processing %k in special tokens~~
+*  nowarn_WMxxxx actually works!
+*  rounding error 'kinks' in angled VIA links
+*  Cloning a templated node in editor retains the template in the clone
+*  Imagemap sortorder problem in editor. If you can see it, you can click it.
+*  cacti_use_ifspeed incorrect when interfaces > 20M and ifhighspeed available
+*  if permissions in Cacti said Anyone *and* you, then no map images are shown
+*  Add a warning for missing tables on manage
+*  ~~Add a warning for no maps on main tab if there are NO MAPS~~
+*  Add note on editor that config names must have no space and end in .conf
 
